@@ -3003,6 +3003,48 @@ function start_highlighting_node(node) {
 	var appid = get_appid(node.href || $(node).find("a")[0].href) || get_appid_wishlist(node.id);
 }
 
+// Allows the user to intuitively remove an item from their wishlist on the app page
+function add_app_page_wishlist_changes(appid) {
+	if ($("#add_to_wishlist_area").length == 0 && $(".game_area_already_owned").length == 0) {
+		$(".demo_area_button").find("a:first").removeAttr("href");
+		$(".demo_area_button").find("a:first").wrap("<div id='add_to_wishlist_area_success' class='queue_control_button'></div>");
+		
+		// Add wishlist areas
+		$(".demo_area_button").prepend("<div id='add_to_wishlist_area' style='display: none;' class='queue_control_button'><a class='btnv6_blue_hoverfade btn_medium' href='javascript:AddToWishlist( " + appid + ", \"add_to_wishlist_area\", \"add_to_wishlist_area_success\", \"add_to_wishlist_area_fail\", \"1_5_9__407\" );'><span>" + localized_strings[language].add_to_wishlist + "</span></a></div><div id='add_to_wishlist_area_fail' style='display: none;'></div>");
+
+		$("#add_to_wishlist_area_success").hover(
+			function() {
+				$(this).find("img").attr("src", self.options.img_remove);
+			}, function() {
+				$(this).find("img").attr("src", "http://store.akamai.steamstatic.com/public/images/v6/ico/ico_selected.png");
+			}
+		)
+
+		$("#add_to_wishlist_area_success").on("click", function() {
+			// get community session variable (this is different from the store session)
+			get_http("http://steamcommunity.com/my/wishlist", function(txt) {
+				var session = txt.match(/sessionid" value="(.+)"/)[1];
+				var user = $("#account_pulldown").text();
+
+				$.ajax({
+					type:"POST",
+					url: "http://steamcommunity.com/id/" + user + "/wishlist",
+					data:{
+						sessionid: session,
+						action: "remove",
+						appid: appid
+					},
+					success: function( msg ) {
+						setValue(appid + "wishlisted", false);
+						$("#add_to_wishlist_area_success").hide();
+						$("#add_to_wishlist_area").show();
+					}
+				});
+			});
+		});
+	}
+}
+
 function change_user_background() {
     var steamID;
 	if ($("#reportAbuseModal").length > 0) { steamID = document.getElementsByName("abuseID")[0].value; }
@@ -5236,6 +5278,7 @@ $(document).ready(function(){
 
 						case /^\/app\/.*/.test(window.location.pathname):
 							var appid = get_appid(window.location.host + window.location.pathname);
+							add_app_page_wishlist_changes(appid);
 							load_inventory().done(function() {
 								if (getValue(appid+"coupon")) display_coupon_message(appid);
 							});
